update bio content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	</head>
 	<body>
 		<h1>Tessa Sullivan</h1>
-		<p>Hi my name is Tessa and I'm a senior majoring in graphic design. I'm from Buffalo, NY and I would to be able to travel around the world one day.I also have 2 cats and a dog who don't get along.</p>
+		<p>Hi, my name is Tessa and I'm a senior majoring in graphic design. I'm from Buffalo, NY and I would to be able to travel around the world one day.I also have 2 cats and a dog who don't get along.</p>
 	</body>
 </html>
